[project]
name = "agentbuilder-assignment1"
version = "0.1.0"
description = "Assignment 1 — YouTube Thumbnail Designer (LangGraph reflexion agent)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.0",
    "langchain-openai>=1.0",
    "langchain-core>=1.0",
    "openai>=2.0",
    "tavily-python>=0.7",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]
